infra/base/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      role: api
  template:
    metadata:
      labels:
        role: api
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: api
          image: docker.longu.dev/fireart/api:develop-latest
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    role: api
  ports:
    - name: api
      port: 3000
      targetPort: 3000
