infra/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.fireart.longu.dev`)
      kind: Rule
      services:
        - name: api
          port: 3000
  tls:
    secretName: fireart.cert
